prevent wrapping for ci syntax class

--- a/src/haz3lweb/www/style.css
+++ b/src/haz3lweb/www/style.css
@@ -1074,6 +1074,7 @@ svg.tile-selected {
   display: flex;
   gap: 0.5em;
   align-items: center;
+  white-space: nowrap;
 }
 
 .ci-header.error {
